Revert "Fix portfolio link padding on mobile."
This reverts commit ae7d81dd60af7c7134e50d6c25990f9a0ee18d8f.

--- a/app/assets/stylesheets/reimagine2/challengepost/_global_nav_bar.sass
+++ b/app/assets/stylesheets/reimagine2/challengepost/_global_nav_bar.sass
@@ -122,11 +122,7 @@
       padding: 0.61em 1em
 
       &.user
-        padding: 1.16em 1em 1.16em 1em
-
-      @media #{$small}
-        &.user
-          padding: 1.16em 1em 0.75em 1em
+        padding: 1.16em 1em 0.75em 1em
 
 
       img.user-avatar
